--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,3 +3,4 @@
 @import 'base/_portfolio-grid';
 @import 'base/_footer';
 @import 'base/_about';
+@import url('https://fonts.googleapis.com/css?family=Roboto');
