background image on about page working responsively

--- a/src/scss/base/_about.scss
+++ b/src/scss/base/_about.scss
@@ -1,6 +1,7 @@
 
 .hero-image {
   background-image: url(../images/GraffitiAlley-85-website.jpg);
+  background: rgba(39,62,84,0.82);
   height: 100vh;
   background-position: center;
   background-repeat: no-repeat;
