--- a/src/scss/base/_about.scss
+++ b/src/scss/base/_about.scss
@@ -1,11 +1,24 @@
+$font-main: sans-serif;
+$font-size: 100%;
 
 .hero-image {
-  background: linear-gradient(
-    rgba(20,20,20, .1)
-    url(../images/GraffitiAlley-85-website.jpg);
+  background:
+  linear-gradient(
+  rgba(5, 5, 5, 0.7),
+  rgba(5, 5, 5, 0.7)),
+    url("../images/GraffitiAlley-85-website.jpg");
   height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+}
+
+.about-me-text {
+  text-align: center;
+  position: absolute;
+  margin: 0 auto;
 }
