--- a/src/scss/base/_about.scss
+++ b/src/scss/base/_about.scss
@@ -1,11 +1,11 @@
-$font-main: sans-serif;
+$font-main: Roboto sans-serif;
 $font-size: 100%;
 
 .hero-image {
   background:
   linear-gradient(
-  rgba(5, 5, 5, 0.7),
-  rgba(5, 5, 5, 0.7)),
+  rgba(5, 5, 5, 0.8,
+  rgba(5, 5, 5, 0.8)),
     url("../images/GraffitiAlley-85-website.jpg");
   height: 100vh;
   display: flex;
@@ -21,4 +21,10 @@ $font-size: 100%;
   text-align: center;
   position: absolute;
   margin: 0 auto;
+  padding: 20%;
+  color: #fff;
+    .header-text {
+      font-size: 3rem;
+      font-weight: 100;
+    }
 }
