started contact me page, added form

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,4 +3,5 @@
 @import 'base/_portfolio-grid';
 @import 'base/_footer';
 @import 'base/_about';
+@import 'base/_contact';
 @import url('https://fonts.googleapis.com/css?family=Roboto');
