--- a/src/scss/base/_about.scss
+++ b/src/scss/base/_about.scss
@@ -6,7 +6,7 @@ $font-size: 100%;
   linear-gradient(
   rgba(5, 5, 5, 0.8,
   rgba(5, 5, 5, 0.8)),
-    url("../images/GraffitiAlley-85-website.jpg");
+    url("../images/GraffitiAlley-85-website.jpg"));
   height: 100vh;
   display: flex;
   justify-content: center;
