--- a/src/scss/base/_about.scss
+++ b/src/scss/base/_about.scss
@@ -4,15 +4,12 @@ $font-size: 100%;
 .hero-image {
   background:
   linear-gradient(
-<<<<<<< HEAD
   rgba(5, 5, 5, 0.8,
-  rgba(5, 5, 5, 0.8)),
+  rgba(5, 5, 5, 0.8),
     url("../images/GraffitiAlley-85-website.jpg"));
-=======
   rgba(5, 5, 5, 0.7),
   rgba(5, 5, 5, 0.7)),
     url("../images/GraffitiAlley-85-website.jpg");
->>>>>>> parent of c9be6da0... writing copy for about page
   height: 100vh;
   display: flex;
   justify-content: center;
