--- a/src/scss/base/_about.scss
+++ b/src/scss/base/_about.scss
@@ -4,7 +4,7 @@ $font-size: 100%;
 .hero-image {
   background:
   linear-gradient(
-  rgba(5, 5, 5, 0.7)),
+  rgba(5, 5, 5, 0.7),
     url("../images/GraffitiAlley-85-website.jpg");
   height: 100vh;
   display: flex;
